// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingSpinner custom colors 1`] = `
<div>
  <span
    aria-label="Loading"
    class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
    role="progressbar"
    style="border-color: #1750ba white white white;"
  />
  <span
    aria-label="Loading"
    class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
    role="progressbar"
    style="border-color: black #cad3e2 #cad3e2 #cad3e2;"
  />
  <span
    aria-label="Loading"
    class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
    role="progressbar"
    style="color: red; border-color: black white white white;"
  />
</div>
`;

exports[`EuiLoadingSpinner is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingSpinner testClass1 testClass2 emotion-euiLoadingSpinner-m-euiTestCss"
  data-test-subj="test subject string"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size l is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-l"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size m is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size s is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-s"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size xl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-xl"
  role="progressbar"
/>
`;

exports[`EuiLoadingSpinner size xxl is rendered 1`] = `
<span
  aria-label="Loading"
  class="euiLoadingSpinner emotion-euiLoadingSpinner-xxl"
  role="progressbar"
/>
`;
